@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-07-04T02:09:56Z",
-  "count_outdated" : 266,
-  "uniques_outdated" : 232,
-  "count" : 267,
-  "uniques" : 233,
+  "timestamp" : "2025-08-09T02:10:09Z",
+  "count_outdated" : 267,
+  "uniques_outdated" : 233,
+  "count" : 268,
+  "uniques" : 234,
   "clones" : [
     {
-      "timestamp": "2025-07-03T00:00:00Z",
+      "timestamp": "2025-08-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
